[gd_scene load_steps=15 format=2]

[ext_resource path="res://GamePlay/NameCard_Left.png" type="Texture" id=1]
[ext_resource path="res://GamePlay/GameBoard_Left.png" type="Texture" id=2]
[ext_resource path="res://GamePlay/NameCard_Right.png" type="Texture" id=3]
[ext_resource path="res://GamePlay/GameBoard_Right.png" type="Texture" id=4]
[ext_resource path="res://GamePlay/ChatBox.png" type="Texture" id=5]
[ext_resource path="res://GamePlay/City_BG.png" type="Texture" id=6]
[ext_resource path="res://GamePlay/ChatBox_ChatButton.png" type="Texture" id=7]
[ext_resource path="res://GamePlay/TimeBoard.png" type="Texture" id=8]
[ext_resource path="res://GamePlay/chno_pixel_code_pro/NotHintedGameFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=10]
[ext_resource path="res://GamePlay/chno_pixel_code_pro/GameUITheme.tres" type="Theme" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 365, 9 )
b = Vector2( 4, 9 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -41.973, 674 )
b = Vector2( -41.973, -100.299 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 50.9747, -233.533 )
b = Vector2( 50.9747, 535.928 )

[node name="GamePlay" type="Node2D"]
scale = Vector2( 0.667, 0.668 )
script = ExtResource( 10 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )
stretch_mode = 3

[node name="TopMenu" type="HBoxContainer" parent="."]
margin_left = 39.0
margin_right = 1887.0
margin_bottom = 180.0
custom_constants/separation = 130
alignment = 2

[node name="PlayerStatsLeft" type="TextureRect" parent="TopMenu"]
margin_right = 631.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -859, 337 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="TopMenu/PlayerStatsLeft"]
margin_left = 178.391
margin_top = 82.3353
margin_right = 288.391
margin_bottom = 104.335
size_flags_horizontal = 3
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "PlayerName:"

[node name="NameLB" type="Label" parent="TopMenu/PlayerStatsLeft"]
margin_left = 287.837
margin_top = 83.8324
margin_right = 397.837
margin_bottom = 105.832
size_flags_horizontal = 3
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )

[node name="Timer" type="TextureRect" parent="TopMenu"]
margin_left = 761.0
margin_right = 1089.0
margin_bottom = 180.0
texture = ExtResource( 8 )

[node name="PlayerStatsRight" type="TextureRect" parent="TopMenu"]
margin_left = 1219.0
margin_right = 1848.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -859, 337 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TopMenu/PlayerStatsRight"]
margin_left = 226.258
margin_top = 80.8383
margin_right = 336.258
margin_bottom = 102.838
size_flags_horizontal = 3
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "PlayerName:"

[node name="NameLB" type="Label" parent="TopMenu/PlayerStatsRight"]
margin_left = 335.703
margin_top = 80.8383
margin_right = 445.703
margin_bottom = 102.838
size_flags_horizontal = 3
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )

[node name="GameContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 175.0
margin_right = 1844.0
margin_bottom = 1047.0
custom_constants/separation = 100

[node name="LeftPlayer" type="TextureRect" parent="GameContainer"]
margin_right = 837.0
margin_bottom = 872.0
texture = ExtResource( 2 )

[node name="Holder" type="Control" parent="GameContainer/LeftPlayer"]
margin_left = 108.411
margin_top = 230.689
margin_right = 108.411
margin_bottom = 230.689
rect_scale = Vector2( 0.85, 0.85 )

[node name="NextHolder0" type="Control" parent="GameContainer/LeftPlayer"]
margin_left = 735.097
margin_top = 332.485
margin_right = 735.097
margin_bottom = 332.485
rect_scale = Vector2( 0.85, 0.85 )
rect_pivot_offset = Vector2( 0.7, 0 )

[node name="NextHolder1" type="Control" parent="GameContainer/LeftPlayer"]
margin_left = 736.597
margin_top = 476.198
margin_right = 736.597
margin_bottom = 476.198
rect_scale = Vector2( 0.7, 0.7 )

[node name="NextHolder2" type="Control" parent="GameContainer/LeftPlayer"]
margin_left = 736.597
margin_top = 580.988
margin_right = 736.597
margin_bottom = 580.988
rect_scale = Vector2( 0.7, 0.7 )

[node name="NextHolder3" type="Control" parent="GameContainer/LeftPlayer"]
margin_left = 735.098
margin_top = 690.27
margin_right = 735.098
margin_bottom = 690.27
rect_scale = Vector2( 0.7, 0.7 )

[node name="RightPlayer" type="TextureRect" parent="GameContainer"]
margin_left = 937.0
margin_right = 1774.0
margin_bottom = 872.0
texture = ExtResource( 4 )

[node name="Holder" type="Control" parent="GameContainer/RightPlayer"]
margin_left = 108.411
margin_top = 230.689
margin_right = 108.411
margin_bottom = 230.689
rect_scale = Vector2( 0.85, 0.85 )

[node name="NextHolder0" type="Control" parent="GameContainer/RightPlayer"]
margin_left = 735.097
margin_top = 332.485
margin_right = 735.097
margin_bottom = 332.485
rect_scale = Vector2( 0.85, 0.85 )
rect_pivot_offset = Vector2( 0.7, 0 )

[node name="NextHolder1" type="Control" parent="GameContainer/RightPlayer"]
margin_left = 736.597
margin_top = 476.198
margin_right = 736.597
margin_bottom = 476.198
rect_scale = Vector2( 0.7, 0.7 )

[node name="NextHolder2" type="Control" parent="GameContainer/RightPlayer"]
margin_left = 736.597
margin_top = 580.988
margin_right = 736.597
margin_bottom = 580.988
rect_scale = Vector2( 0.7, 0.7 )

[node name="NextHolder3" type="Control" parent="GameContainer/RightPlayer"]
margin_left = 735.098
margin_top = 690.27
margin_right = 735.098
margin_bottom = 690.27
rect_scale = Vector2( 0.7, 0.7 )

[node name="Chat" type="Button" parent="."]
margin_left = 867.041
margin_top = 989.189
margin_right = 1077.04
margin_bottom = 1083.19
icon = ExtResource( 5 )
flat = true

[node name="ChatBoxChatButton" type="Sprite" parent="Chat"]
position = Vector2( 104, 38 )
texture = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="BlockContainer" type="Node2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 314, 996 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 362.819, 327.844 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 629.685, 465.569 )
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 934.033, 0 )

[node name="RemoteContainer" type="Node2D" parent="StaticBody2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 314, 996 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 362.819, 327.844 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 629.685, 465.569 )
shape = SubResource( 3 )
